# binance-websocket-experiment

./: .clangd  .gitignore  CMakeLists.txt  README.md  architecture.md  example.py  perf  perf.data  stream.ndjson  task.md
charts/: latency_charts.ipynb
docs/: architecture.md  architecture.puml  fast_connect_sequence.puml
include/: cpu_affinity.hpp  file_writer.hpp  latency.hpp  logger.hpp  message.hpp  reactor.hpp  runner.hpp  stream_merger.hpp  url.hpp
latencies/: async_conn_0_20250905_142212.lat  async_conn_0_20250905_142216.lat  async_conn_0_20250905_142220.lat  async_conn_0_20250905_142224.lat  async_conn_0_20250905_155128.lat  async_conn_0_20250905_155132.lat  async_conn_0_20250905_155136.lat  async_conn_0_20250905_155140.lat  async_conn_1_20250905_142216.lat  async_conn_1_20250905_142220.lat  async_conn_1_20250905_142224.lat  async_conn_1_20250905_155132.lat  async_conn_1_20250905_155136.lat  async_conn_1_20250905_155140.lat  async_conn_2_20250905_142220.lat  async_conn_2_20250905_142224.lat  async_conn_2_20250905_155136.lat  async_conn_2_20250905_155140.lat  async_conn_3_20250905_142224.lat  async_conn_3_20250905_155140.lat  conn_0_20250904_223751.lat  conn_1_20250904_223751.lat  python_20250905_142229.lat  python_20250905_155144.lat  python_latencies_example.py  sync_conn_0_20250905_142231.lat  sync_conn_0_20250905_142236.lat  sync_conn_0_20250905_142240.lat  sync_conn_0_20250905_142245.lat  sync_conn_0_20250905_155147.lat  sync_conn_0_20250905_155152.lat  sync_conn_0_20250905_155156.lat  sync_conn_0_20250905_155200.lat  sync_conn_1_20250905_142236.lat  sync_conn_1_20250905_142240.lat  (+10 more)
src/: main.cpp  (+1 more)
(+31 files in other folders)
